<resources>
    <string name="app_name">Funky api practice</string>
    <string name="actbtn">Button to first activity</string>
    <string name="btn1">Api1</string>
    <string name="btn2">Api2</string>
    <string name="btnapi">Smile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apibutton8">neko</string>
    <string name="btnawoo">Awoo</string>
    <string name="btnpat">pat</string>
    <string name="btnhome">Home</string>
    <string name="buttonit">one liner</string>
    <string name="buttonit2">observational</string>
    <string name="buttonit3">Stereotype</string>
    <string name="buttonit4">Wordplay</string>
    <string name="buttonithome">Home screen</string>
</resources>